force-app/main/default/objects/SBQQ__ProductOption__c/fields/Mixa_Maxa_Options_Count__c.field-meta.xml
<CustomField>
    <fullName>Mixa_Maxa_Options_Count__c</fullName>
    <description>Mixa Maxa Options Count</description>
    <label>Mixa Maxa Options Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>