force-app/main/default/objects/SBQQ__ProductOption__c/fields/Optional_SKU_Product_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Optional_SKU_Product_Name_ID__c</fullName>
    <description>Use for report</description>
    <formula>SBQQ__OptionalSKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report</inlineHelpText>
    <label>Optional SKU: Product Name ID</label>
    <type>Text</type>
</CustomField>