force-app/main/default/objects/SBQQ__ProductOption__c/fields/Product_Id_Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Product_Id_Product_Option__c</fullName>
    <formula>SBQQ__OptionalSKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Id (Product Option)</label>
    <type>Text</type>
</CustomField>