force-app/main/default/objects/SBQQ__ProductOption__c/fields/Product_Option_NAV_Prod_No__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_NAV_Prod_No__c</fullName>
    <formula>SBQQ__OptionalSKU__r.NAV_Prod_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Option NAV Prod No</label>
    <type>Text</type>
</CustomField>