force-app/main/default/objects/SBQQ__ProductOption__c/listViews/Deal_Desk_ProductOption.listView-meta.xml
<ListView>
    <fullName>Deal_Desk_ProductOption</fullName>
    <filterScope>Queue</filterScope>
    <label>Deal Desk</label>
    <queue>Deal_Desk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>